--- a/examples/mysql-wordpress-pd/wordpress-deployment.yaml
+++ b/examples/mysql-wordpress-pd/wordpress-deployment.yaml
@@ -41,7 +41,7 @@ spec:
         tier: frontend
     spec:
       containers:
-      - image: wordpress:4.4-apache
+      - image: wordpress
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
